--- a/map,filter and reduce.ipynb
+++ b/map,filter and reduce.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,8 +16,8 @@
    "source": [
     "ls=[2,3,4,5]\n",
     "ls1=[1,2,3,4]\n",
-    "filtered=map(lambda a,b: a+b,ls,ls1)\n",
-    "print(list(filtered))"
+    "filtered=list(map(lambda a,b: a+b,ls,ls1))\n",
+    "print(filtered)"
    ]
   },
   {
@@ -42,22 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n"
+      "60\n"
      ]
     }
    ],
    "source": [
     "from functools import reduce\n",
-    "ls=[2,3,4,5]\n",
+    "ls=[1,3,4,5]\n",
     "\n",
-    "reduced=reduce(lambda x,y:x*y,[1,2,3,4,5])\n",
+    "reduced=reduce(lambda x,y:x*y,ls)\n",
     "print(reduced)"
    ]
   },
